add the package.json file

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "vite preview",
+    "build:staging": "vite build --mode staging",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
